--- a/web/popcritic/public/index.html
+++ b/web/popcritic/public/index.html
@@ -61,7 +61,8 @@
   <body>
   </body>
   <script>
-    const sitekey = ""; //Your RECAPTCHA V3 Site Key
+    // env
+    const sitekey = "6Ldv1u4gAAAAAOWxK-DOYDZgRxP1TItEj61ggYMJ"; //Your RECAPTCHA V3 Site Key
     function getToken() {
       return new Promise((resolve,reject) => {
         grecaptcha.ready(function() {
@@ -74,7 +75,7 @@
 
      const constantMock = window.fetch;
      window.fetch = async function(url,data) {
-      if (url.startsWith("https://popcritic.herokuapp.com") && data && data.method) {
+      if (url.startsWith("http://localhost") && data && data.method) {
         var token = await getToken();
         if (data && data.headers) data.headers = {...data.headers,"g-recaptcha-response": token};
         else data = {...(data || {}), headers: {"g-recaptcha-response": token}}
